[package]
name = "velor-sdk"
description = "The Official Velor SDK"
version = "0.0.3"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
velor-cached-packages = { workspace = true }
velor-crypto = { workspace = true }
velor-global-constants = { workspace = true }
velor-ledger = { workspace = true }
velor-rest-client = { workspace = true }
velor-types = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
ed25519-dalek-bip32 = { workspace = true }
hex = { workspace = true }
lazy_static = "1.4.0"
move-core-types = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tiny-bip39"]
