[package]
name = "shuffle"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "CLI frontend for Shuffle"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
toml = "0.5.8"

[[bin]]
name = "shuffle"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.2.0"
