[tool.poetry]
name = "aptos_testsuite"
version = "0.1.0"
description = "Aptos E2E tests and utilities in python, including Forge"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
click = "^8.1.3"
psutil = "^5.9.1"
requests = "^2.31.0"
pyyaml = "^6.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pyright = "^1.1.309"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUndefinedVariable = "none"
typeCheckingMode = "basic" # TODO(rustielin): eventually make this strict
