[tool.poetry]
name = "aptos_testsuite"
version = "0.1.0"
description = "Aptos E2E tests and utilities in python, including Forge"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = "^8.1.3"
psutil = "^5.9.1"
requests = "^2.33.0"
urllib3 = "^2.7.0"
cryptography = ">=46.0.6"
pyyaml = "^6.0"
tabulate = "^0.9.0"
dacite = "^1.8.1"
kubernetes = "^35.0.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pyright = "^1.1.309"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUndefinedVariable = "none"
typeCheckingMode = "basic" # TODO(rustielin): eventually make this strict
