[package]
name = "aptos-types"
version = "0.0.3"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos core types"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bcs = "0.1.3"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
hex = "0.4.3"
itertools = { version = "0.10.3", default-features = false }
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.10.0"
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", default-features = false, optional = true }
rand = "0.7.3"
serde = { version = "1.0.137", features = ["derive"], default-features = false }
serde_bytes = "0.11.6"
serde_json = "1.0.81"
serde_yaml = "0.8.24"
thiserror = "1.0.31"
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }

aptos-bitvec = { path = "../crates/aptos-bitvec" }
aptos-crypto = { path = "../crates/aptos-crypto" }
aptos-crypto-derive = { path = "../crates/aptos-crypto-derive" }

move-deps = { path = "../aptos-move/move-deps", features = ["address32"] }

[dev-dependencies]
claims = "0.7"
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.5.5"
serde_json = "1.0.81"

aptos-crypto = { path = "../crates/aptos-crypto", features = ["fuzzing"] }
move-deps = { path = "../aptos-move/move-deps", features = ["address32", "fuzzing"] }

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "aptos-crypto/fuzzing", "move-deps/fuzzing"]
