[package]
name = "aptos-types"
description = "Aptos core types"
version = "0.0.3"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-bitvec = { workspace = true }
aptos-crypto = { workspace = true }
aptos-crypto-derive = { workspace = true }
arr_macro = { workspace = true }
bcs = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
move-core-types = { workspace = true }
move-table-extension = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }

[dev-dependencies]
aptos-crypto = { workspace = true, features = ["fuzzing"] }
claims = { workspace = true }
move-core-types = { workspace = true, features = ["fuzzing"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "aptos-crypto/fuzzing", "move-core-types/fuzzing"]
