[package]
name = "aptos-types"
description = "Aptos core types"
version = "0.0.3"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-bitvec = { workspace = true }
aptos-crypto = { workspace = true }
aptos-crypto-derive = { workspace = true }
aptos-dkg = { workspace = true }
aptos-infallible = { workspace = true }
arbitrary = { workspace = true, features = ["derive"], optional = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dashmap = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
fixed = { workspace = true }
fxhash = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
jsonwebtoken = { workspace = true }
lru = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-model = { workspace = true }
move-table-extension = { workspace = true }
move-vm-types = { workspace = true }
num-bigint = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
passkey-types = { workspace = true }
poem-openapi = { workspace = true }
poem-openapi-derive = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
quick_cache = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
ref-cast = { workspace = true }
ring = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ahash = { workspace = true }
aptos-crypto = { workspace = true, features = ["fuzzing", "testing"] }
aptos-proptest-helpers = { workspace = true }
async-trait = { workspace = true }
ciborium = { workspace = true }
claims = { workspace = true }
coset = { workspace = true }
criterion = { workspace = true }
derivative = { workspace = true }
move-core-types = { workspace = true, features = ["fuzzing"] }
p256 = { workspace = true }
passkey-authenticator = { workspace = true }
passkey-client = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[features]
default = []
testing = ["aptos-crypto/fuzzing"]
fuzzing = ["proptest", "proptest-derive", "aptos-crypto/fuzzing", "move-core-types/fuzzing", "arbitrary"]

[[bench]]
name = "keyless"
harness = false

[[bench]]
name = "state_key"
harness = false

[package.metadata.cargo-machete]
ignored = ['poem-openapi']
