[package]
name = "aptos-vm-validator"
description = "Aptos vm validator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-event-notifications = { workspace = true }
aptos-gas-meter = { workspace = true }
aptos-scratchpad = { workspace = true }
aptos-state-view = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
fail = { workspace = true }

[dev-dependencies]
aptos-cached-packages = { workspace = true }
aptos-crypto = { workspace = true }
aptos-db = { workspace = true }
aptos-event-notifications = { workspace = true }
aptos-executor-test-helpers = { workspace = true }
aptos-gas-schedule = { workspace = true, features = ["testing"] } 
aptos-temppath = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-genesis = { workspace = true }
move-core-types = { workspace = true }
rand = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["aptos-types/fuzzing", "aptos-crypto/fuzzing", "aptos-db/fuzzing"]
