[package]
name = "velor-vm-validator"
description = "Velor vm validator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
velor-logger = { workspace = true }
velor-storage-interface = { workspace = true }
velor-types = { workspace = true }
velor-vm = { workspace = true }
velor-vm-environment = { workspace = true }
velor-vm-logging = { workspace = true }
fail = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
velor-cached-packages = { workspace = true }
velor-crypto = { workspace = true }
velor-db = { workspace = true }
velor-executor-test-helpers = { workspace = true }
velor-gas-schedule = { workspace = true, features = ["testing"] } 
velor-temppath = { workspace = true }
velor-types = { workspace = true, features = ["testing"] }
velor-vm-genesis = { workspace = true }
move-vm-types = { workspace = true, features = ["testing"] }
rand = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["velor-types/fuzzing", "velor-crypto/fuzzing", "velor-db/fuzzing"]
