[package]
name = "api-integration-tests"
version = "0.0.1"
authors = ["Diem Association <opensource@diem.com>"]
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bcs = "0.1.2"
hex = "0.4.3"
reqwest = { version = "0.11.2", features = ["blocking", "json"], default_features = false }
serde_json = "1.0.64"

forge = { path = "../../testsuite/forge" }
diem-workspace-hack = { path = "../../common/workspace-hack" }

[[test]]
name = "api-forge"
harness = false
