[package]
name = "aptos-openapi-spec-generator"
description = "Aptos API OpenAPI Spec Generator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-api = { workspace = true }
aptos-config = { workspace = true }
aptos-mempool = { workspace = true, features = ["fuzzing"] }
aptos-storage-interface = { workspace = true, features = ["fuzzing"] }
aptos-types = { workspace = true }
clap = { workspace = true }
