[package]
name = "velor-openapi-spec-generator"
description = "Velor API OpenAPI Spec Generator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
velor-api = { workspace = true }
velor-config = { workspace = true }
velor-mempool = { workspace = true, features = ["fuzzing"] }
velor-storage-interface = { workspace = true }
velor-types = { workspace = true }
clap = { workspace = true }
