[package]
name = "aptos-api-test-context"
description = "Aptos API test context"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-api = { workspace = true }
aptos-api-types = { workspace = true }
aptos-cached-packages = { workspace = true }
aptos-config = { workspace = true }
aptos-crypto = { workspace = true }
aptos-genesis = { workspace = true }
aptos-mempool = { workspace = true, features = ["fuzzing"] }
aptos-sdk = { workspace = true }
aptos-temppath = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
aptosdb = { workspace = true, features = ["fuzzing"] }
bytes = { workspace = true }
executor = { workspace = true }
executor-types = { workspace = true }
goldenfile = { workspace = true }
hyper = { workspace = true }
mempool-notifications = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
storage-interface = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
vm-validator = { workspace = true }
warp = { workspace = true }
warp-reverse-proxy = { workspace = true }
