[package]
name = "velor-api-test-context"
description = "Velor API test context"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
velor-api = { workspace = true }
velor-api-types = { workspace = true }
velor-cached-packages = { workspace = true }
velor-config = { workspace = true }
velor-crypto = { workspace = true }
velor-db = { workspace = true, features = ["fuzzing"] }
velor-executor = { workspace = true }
velor-executor-types = { workspace = true }
velor-framework = { workspace = true }
velor-genesis = { workspace = true }
velor-indexer-grpc-table-info = { workspace = true }
velor-mempool = { workspace = true, features = ["fuzzing"] }
velor-mempool-notifications = { workspace = true }
velor-sdk = { workspace = true }
velor-storage-interface = { workspace = true }
velor-temppath = { workspace = true }
velor-types = { workspace = true }
velor-vm = { workspace = true }
velor-vm-logging = { workspace = true }
velor-vm-validator = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
goldenfile = { workspace = true }
hyper = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
warp-reverse-proxy = { workspace = true }
