[package]
name = "aptos-api-types"
description = "Aptos API Types"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["rlp_encoding"]
rlp_encoding = ["alloy-rlp"]

[dependencies]
anyhow = { workspace = true }
aptos-config = { workspace = true }
aptos-crypto = { workspace = true }
aptos-framework = { workspace = true }
aptos-logger = { workspace = true }
aptos-openapi = { workspace = true }
aptos-resource-viewer = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-types = { workspace = true, features = ["rlp_encoding"] }
aptos-vm = { workspace = true }
async-trait = { workspace = true }
alloy = { version = "1.0.13", default-features = false }
alloy-rlp = { version = "0.3.12", optional = true, features = ["derive"] }
bcs = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
poem-openapi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["async-trait", "poem", "poem-openapi-derive"]
