[package]
name = "velor-api-types"
description = "Velor API Types"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
velor-config = { workspace = true }
velor-crypto = { workspace = true }
velor-logger = { workspace = true }
velor-openapi = { workspace = true }
velor-resource-viewer = { workspace = true }
velor-storage-interface = { workspace = true }
velor-types = { workspace = true }
velor-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
poem-openapi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["async-trait", "poem", "poem-openapi-derive"]
