[package]
name = "af-cli"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "CLI frontend for the Move compiler and VM (with Diem Framework)"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.52"
bcs = "0.1.2"
clap = "3.1.8"

aptos-vm = { path = "../aptos-vm" }
aptos-workspace-hack = { path = "../../crates/aptos-workspace-hack" }
cached-framework-packages =  { path = "../framework/cached-packages" }
move-core-types = { git = "https://github.com/move-language/move", rev = "476305d239ce6afafce15a297c8c3839dd8465b6", features=["address32"] }
move-vm-types = { git = "https://github.com/move-language/move", rev = "476305d239ce6afafce15a297c8c3839dd8465b6" }
move-cli = { git = "https://github.com/move-language/move", rev = "476305d239ce6afafce15a297c8c3839dd8465b6" }

[dev-dependencies]
datatest-stable = "0.1.1"

[[bin]]
name = "af-cli"
path = "src/main.rs"

[[test]]
name = "cli_testsuite"
harness = false
