[package]
name = "af-cli"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "CLI frontend for the Move compiler and VM (with Aptos Framework)"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.57"
bcs = "0.1.3"
clap = "3.1.8"

aptos-vm = { path = "../aptos-vm" }
aptos-workspace-hack = { path = "../../crates/aptos-workspace-hack" }
cached-framework-packages =  { path = "../framework/cached-packages" }
move-deps = { path = "../move-deps", features = ["address32"] }

[dev-dependencies]
datatest-stable = "0.1.1"

[[bin]]
name = "af-cli"
path = "src/main.rs"

[[test]]
name = "cli_testsuite"
harness = false
