[package]
name = "aptos-abstract-gas-usage"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-gas-algebra = { workspace = true }
aptos-gas-meter = { workspace = true }
aptos-gas-schedule = { workspace = true }
aptos-vm-types = { workspace = true }
move-binary-format = { workspace = true }
