[package]
name = "aptos-aggregator"
description = "Aggregator sources for the Aptos blockchain"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-crypto = { workspace = true }
aptos-state-view = { workspace = true }
aptos-table-natives = { workspace = true }
aptos-types = { workspace = true }
bcs = { workspace = true }
better_any = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
aptos-language-e2e-tests = { workspace = true }
claims = { workspace = true }

[features]
default = []
