[package]
name = "aptos-move-debugger"
version = "0.1.0"
description = "A tool to replay transactions on chain and to execute transactions locally."

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-block-executor = { workspace = true }
aptos-consensus = { workspace = true }
aptos-crypto = { workspace = true }
aptos-gas-profiling = { workspace = true }
aptos-logger = { workspace = true }
aptos-rest-client = { workspace = true }
aptos-types = { workspace = true }
aptos-validator-interface = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-logging = { workspace = true }
aptos-vm-types = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[[bin]]
name = "remote-gas-profiler"
